--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <link rel="stylesheet" href="css/bootstrap.min.css" />
       <link rel="stylesheet" href="css/slick.css" type="text/css" />
       <link rel="stylesheet" href="css/templatemo-style.css" />
+      <link rel="stylesheet" href="css/calculator.css" />
    </head>
    <body>
       <video autoplay muted loop id="bg-video">
@@ -52,10 +53,12 @@
                                  >
                                  <div class="circle"></div>
                               </li>
-                              <!-- <li class="nav-item">
-                                 <a class="nav-link" href="#0" data-no="2">Gallery</a>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="#0" data-no="2"
+                                    >Calculator</a
+                                 >
                                  <div class="circle"></div>
-                              </li> -->
+                              </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="#0" data-no="3">About</a>
                                  <div class="circle"></div>
@@ -101,13 +104,6 @@
                               250,000 light-year-long streamer of stars is stretching,
                               as it is seen edge-on by Hubble and surrounded by a
                               milky-colored envelope of gas and dust.
-                              <!-- <a
-                                 rel="nofollow"
-                                 href="https://templatemo.com/contact"
-                                 target="_blank"
-                                 >contact us</a
-                              >
-                              for more information. -->
                            </p>
                         </div>
                         <div class="intro-right">
@@ -127,107 +123,23 @@
                         <div class="circle intro-circle-3"></div>
                         <div class="circle intro-circle-4"></div>
                      </div>
-                     <!-- <div class="text-center">
-                        <a
-                           href="#0"
-                           data-page-no="2"
-                           class="btn btn-primary tm-intro-btn tm-page-link"
-                        >
-                           View Gallery
-                        </a>
-                     </div> -->
                   </div>
                </li>
-               <!-- <li data-page-no="2">
-                  <!-- Image Carousel 
-                  <div class="mx-auto position-relative gallery-container">
-                     <div class="circle intro-circle-1"></div>
-                     <div class="circle intro-circle-2"></div>
-                     <div class="mx-auto tm-border-top gallery-slider">
-                        <figure class="effect-julia item">
-                           <img src="img/gallery-img-01.jpg" alt="Image" />
-                           <figcaption>
-                              <div>
-                                 <p>Julia dances in the deep dark</p>
-                              </div>
-                              <a href="#">View more</a>
-                           </figcaption>
-                        </figure>
-                        <figure class="effect-julia item">
-                           <img src="img/gallery-img-02.jpg" alt="Image" />
-                           <figcaption>
-                              <div>
-                                 <p>Julia dances in the deep dark</p>
-                              </div>
-                              <a href="#">View more</a>
-                           </figcaption>
-                        </figure>
-                        <figure class="effect-julia item">
-                           <img src="img/gallery-img-03.jpg" alt="Image" />
-                           <figcaption>
-                              <div>
-                                 <p>Julia dances in the deep dark</p>
-                              </div>
-                              <a href="#">View more</a>
-                           </figcaption>
-                        </figure>
-                        <figure class="effect-julia item">
-                           <img src="img/gallery-img-04.jpg" alt="Image" />
-                           <figcaption>
-                              <div>
-                                 <p>Julia dances in the deep dark</p>
-                              </div>
-                              <a href="#">View more</a>
-                           </figcaption>
-                        </figure>
-                        <figure class="effect-julia item">
-                           <img src="img/gallery-img-05.jpg" alt="Image" />
-                           <figcaption>
-                              <div>
-                                 <p>Julia dances in the deep dark</p>
-                              </div>
-                              <a href="#">View more</a>
-                           </figcaption>
-                        </figure>
-                        <figure class="effect-julia item">
-                           <img src="img/gallery-img-06.jpg" alt="Image" />
-                           <figcaption>
-                              <div>
-                                 <p>Julia dances in the deep dark</p>
-                              </div>
-                              <a href="#">View more</a>
-                           </figcaption>
-                        </figure>
-                        <figure class="effect-julia item">
-                           <img src="img/gallery-img-07.jpg" alt="Image" />
-                           <figcaption>
-                              <div>
-                                 <p>Julia dances in the deep dark</p>
-                              </div>
-                              <a href="#">View more</a>
-                           </figcaption>
-                        </figure>
-                        <figure class="effect-julia item">
-                           <img src="img/gallery-img-08.jpg" alt="Image" />
-                           <figcaption>
-                              <div>
-                                 <p>Julia dances in the deep dark</p>
-                              </div>
-                              <a href="#">View more</a>
-                           </figcaption>
-                        </figure>
-                        <figure class="effect-julia item">
-                           <img src="img/gallery-img-09.jpg" alt="Image" />
-                           <figcaption>
-                              <div>
-                                 <p>Julia dances in the deep dark</p>
-                              </div>
-                              <a href="#">View more</a>
-                           </figcaption>
-                        </figure>
-                     </div>
-                  </div>
-               </li> -->
+               <li data-page-no="2">
+                  <form>
+                     <input type="text" id="operand1" />
+                     <input type="text" id="operand2" />
+                     <span>=</span>
+                     <input type="text" id="result" disabled /><br />
+                     <button type="button" onclick="add()">+</button>
+                     <button type="button" onclick="subtract()">-</button>
+                     <button type="button" onclick="clearInput()" class="clear">
+                        C</button
+                     ><br />
+                     <button type="button" onclick="multiply()">x</button>
+                     <button type="button" onclick="divide()">/</button><br />
+                  </form>
+               </li>
                <li data-page-no="3" class="px-3">
                   <div
                      class="position-relative page-width-1 page-right tm-border-top tm-border-bottom"
@@ -281,39 +193,6 @@
                                  ></iframe>
                               </div>
                            </div>
-                           <!-- <form action="#" method="POST" class="contact-form">
-                              <div class="input-group tm-mb-30">
-                                 <input
-                                    name="name"
-                                    type="text"
-                                    class="form-control rounded-0 border-top-0 border-end-0 border-start-0"
-                                    placeholder="Name"
-                                 />
-                              </div>
-                              <div class="input-group tm-mb-30">
-                                 <input
-                                    name="email"
-                                    type="text"
-                                    class="form-control rounded-0 border-top-0 border-end-0 border-start-0"
-                                    placeholder="Email"
-                                 />
-                              </div>
-                              <div class="input-group tm-mb-30">
-                                 <textarea
-                                    rows="5"
-                                    name="message"
-                                    class="textarea form-control rounded-0 border-top-0 border-end-0 border-start-0"
-                                    placeholder="Message"
-                                 ></textarea>
-                              </div>
-                              <div class="input-group justify-content-end">
-                                 <input
-                                    type="submit"
-                                    class="btn btn-primary tm-btn-pad-2"
-                                    value="Send"
-                                 />
-                              </div>
-                           </form> -->
                         </div>
                         <div class="col-md-6 tm-contact-right">
                            <p class="mb-4">
@@ -328,12 +207,6 @@
                               official transcript after graduation to certify that all
                               coursework has been satisfactorily completed
                            </p>
-                           <!-- <div>
-                              Email:
-                              <a href="mailto:info@company.com" class="tm-link-white"
-                                 >info@company.com</a
-                              >
-                           </div> -->
                            <div class="tm-mb-45">
                               Tel:
                               <a href="tel:3233433000" class="tm-link-white"
@@ -373,5 +246,6 @@
       <script src="js/bootstrap.min.js"></script>
       <script src="js/slick.js"></script>
       <script src="js/templatemo-script.js"></script>
+      <script src="js/calculator.js"></script>
    </body>
 </html>
