--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <link rel="stylesheet" href="css/slick.css" type="text/css" />
       <link rel="stylesheet" href="css/templatemo-style.css" />
       <link rel="stylesheet" href="css/calculator.css" />
+      <link rel="stylesheet" href="css/labPractice.css" />
    </head>
    <body>
       <video autoplay muted loop id="bg-video">
@@ -125,7 +126,7 @@
                      </div>
                   </div>
                </li>
-               <li data-page-no="2">
+               <!-- <li data-page-no="2">
                   <form>
                      <input type="text" id="operand1" />
                      <input type="text" id="operand2" />
@@ -139,7 +140,102 @@
                      <button type="button" onclick="multiply()">x</button>
                      <button type="button" onclick="divide()">/</button><br />
                   </form>
+
+                  <form>
+                     <label for="priceIncGST">Enter amount with GST included:</label>
+                     $<input type="number" id="priceIncGST" />
+                     <button onclick="calculateGST()">Calculate GST</button><br />
+                     <label>GST: </label>
+                     <input type="text" id="gst" disabled /><br />
+                  </form>
+               </li> -->
+               <li data-page-no="2">
+                  <div class="calculator-container">
+                     <!-- First Calculator Form -->
+                     <form>
+                        <label>Regular Calculator</label>
+                        <input type="text" id="operand1" />
+                        <input type="text" id="operand2" />
+                        <span>=</span>
+                        <input type="text" id="result" disabled /><br />
+                        <button type="button" onclick="add()">+</button>
+                        <button type="button" onclick="subtract()">-</button>
+                        <button type="button" onclick="clearInput()" class="clear">
+                           C</button
+                        ><br />
+                        <button type="button" onclick="multiply()">x</button>
+                        <button type="button" onclick="divide()">/</button><br />
+                     </form>
+
+                     <!-- GST Calculator Form -->
+                     <form>
+                        <label for="priceIncGST"
+                           >Enter amount with GST included:</label
+                        >
+                        $<input type="number" id="priceIncGST" />
+                        <button onclick="calculateGST()" class="gst-btn">
+                           Calculate GST</button
+                        ><br />
+                        <label>GST: </label>
+                        <input type="text" id="gst" disabled /><br />
+                     </form>
+                     <!-- BMI Calculator -->
+                     <form>
+                        <label for="height">Enter height in inches: </label>
+                        <input type="number" id="height" /><br />
+                        <label for="weight">Enter weight in lbs: </label>
+                        <input type="number" id="weight" />
+                        <button type="button" onclick="calculateBMI()" class="bmi-btn">
+                           Calculate BMI</button
+                        ><br />
+                        BMI is:
+                        <input class="large" type="text" id="bmi" disabled /><br />
+                        <label>BMI Category:</label>
+                        <input
+                           class="large"
+                           type="text"
+                           id="bmiMessage"
+                           disabled
+                        /><br />
+                     </form>
+                     <!-- The Largest Number -->
+                     <form>
+                        <button onclick="generateRandom()" class="small-text-button">
+                           Generate random numbers</button
+                        ><br />
+                        The largest number is:
+                        <input type="number" id="random" disabled /><br />
+                     </form>
+                     <!-- Data Simulation -->
+                     <form>
+                        <button onclick="runSimulation()" class="simulation-BTN">
+                           Run simulation</button
+                        ><br />
+                        Largest income: <input type="text" id="max" disabled /><br />
+                        Lowest income: <input type="text" id="min" disabled /><br />
+                        Average income:
+                        <input type="text" id="average" disabled /><br />
+                     </form>
+                     <!-- Fibonacci's Rabbits -->
+                     <form>
+                        <label for="height">Enter the number of months:</label>
+                        <input type="number" id="months" /><button
+                           class="fibonacci-btn"
+                           onclick="generateRabbits()"
+                        >
+                           Generate rabbits!</button
+                        ><br />
+                        <div class="center">
+                           <img
+                              id="rabbit-couple"
+                              src="https://josecarlosgt.github.io/resources/rabbit-couple.jpeg"
+                           />
+                        </div>
+                        <div id="rabbits" class="center"></div>
+                     </form>
+                  </div>
                </li>
+
                <li data-page-no="3" class="px-3">
                   <div
                      class="position-relative page-width-1 page-right tm-border-top tm-border-bottom"
@@ -247,5 +343,6 @@
       <script src="js/slick.js"></script>
       <script src="js/templatemo-script.js"></script>
       <script src="js/calculator.js"></script>
+      <script src="js/labPractice.js"></script>
    </body>
 </html>
